@@ -277,6 +277,7 @@ t_llllobj_common_symbols_table *llllobj_common_symbols_gettable()
     x->s_addslot = gensym("addslot");
     x->s_setslot = gensym("setslot");
     x->s_setdurationline = gensym("setdurationline");
+    x->s_setdurationline = gensym("setdl");
     x->s_addbreakpoint = gensym("addbreakpoint");
     x->s_erasebreakpoints = gensym("erasebreakpoints");
     x->s_widthfactor = gensym("widthfactor");
